--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Apple Watch</title>
+    <title>DSI</title>
     <!-- FONT_FAMILY -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,10 +18,132 @@
   </head>
   <body>
     <!-- HEAADER -->
-    <header class="site-header"></header>
+    <header class="site-header">
+      <div class="container">
+        <div class="sitenav-header">
+          <a href="index.html" class="sitenav-header__logo__link">
+          <img src="img/Group 1317.svg" alt="" class="sitenav-header__logo">
+          </a>
+          <nav class="sitenav-header__navigation">
+            <ul class="sitenav-header-list">
+              <li class="sitenav-header-item">
+                <a href="#" class="sitenav-header-link">Services</a>
+              </li>
+              <li class="sitenav-header-item">
+                <a href="#" class="sitenav-header-link">Product</a>
+              </li>
+              <li class="sitenav-header-item">
+                <a href="#" class="sitenav-header-link">Technology</a>
+              </li>
+              <li class="sitenav-header-item">
+                <a href="#" class="sitenav-header-link">About</a>
+              </li>
+              <li class="sitenav-header-item">
+                <a href="#" class="sitenav-header-link">Client</a>
+              </li>
+              <li class="sitenav-header-item">
+                <a href="#" class="sitenav-header-link">Partner</a>
+              </li>
+            </ul>
+          </nav>
+          <div class="sitenav-header-icon">
+            <a href="#" class="sitenav-header-icon__link">
+              <img src="img/Union.svg" alt="" class="sitenav-header-icon__img">
+            </a>
+            <a href="#" class="sitenav-header-icon__link">
+              <img src="img/mail.svg" alt="" class="sitenav-header-icon__img">
+            </a>
+            <a href="#" class="sitenav-header-icon__link">
+              <img src="img/shuffle.svg" alt="" class="sitenav-header-icon__img">
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
     <!-- MAIN -->
-    <main class="main-content"></main>
+    <main class="main-content">
+      <div class="container">
+        <div class="main-content-header">
+          <div class="main-content-technology">
+            <h1 class="main-content-title">Making the most of the <br> ever-growing <br> 
+             <span>Information Technology</span>
+            </h1>
+            <p class="main-content-text">Managed by a team of professional experts with extensive <br> experience and impressive track records
+            </p>
+            <div class="main-button">Read More</div>
+          </div>
+          <img src="img/pana.svg" alt="" class="main-content-img">
+        </div>
+      </div>
+    </main>
+
+    <!-- SITE SECTION  -->
+
+    <section class="site-section">
+      <div class="container">
+        <div class="site-section-dsi">
+          <img src="img/pana2.svg" alt="" class="site-section-img">
+          <div class="site-section-dsi-welcome">
+            <h2 class="site-section-title">Welcome to <span> Dwidasa Samsara <br> Indonesia (DSI)</span>
+            </h2>
+            <p class="site-section-text">Dwidasa Samsara Indonesia (DSI) was firstly established in 2010 <br> by the founders, who each of them has a common end objective <br> to innovate new creations by making the most of the <br> ever-growing information technology through <span> DSI’s</span> distinct <br> front-end based application concept.
+            </p>
+            <p class="site-section-text">
+              Managed by a team of professional experts with extensive <br> experience and impressive track records, <span> DSI</span> believes that <br> continuous improvements and innovations assure your business <br> to run effectively and efficiently.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- SECTION SERVICE  -->
+    <h2 class="section-service-header">Product and Service</h2>
+    <section class="section-service">
+      <div class="container">
+        <ul class="section-service-list">
+          <li class="section-service-item">
+            <img src="img/product-description 1.svg" alt="" class="section-service-img">
+            <h3 class="section-service-title">Our Product</h3>
+            <p class="section-service-text">Our product is made on the base of our <br> team’s careful research and analyses, <br> ranging from internet based <br> application.
+            </p>
+            <div class="main-button section-service-button">Read More</div>
+          </li>
+          <li class="section-service-item">
+            <img src="img/verified 1.svg" alt="" class="section-service-img">
+            <h3 class="section-service-title">Our Service</h3>
+            <p class="section-service-text">DSI’s shared service solutions focus on the front-end based software development, designed specifically for the banking and financial sectors.
+            </p>
+            <div class="main-button section-service-button">Read More</div>
+          </li>
+          <li class="section-service-item">
+            <img src="img/cogwheel 1.svg" alt="" class="section-service-img">
+            <h3 class="section-service-title">Our Technology</h3>
+            <p class="section-service-text">First JAVA, runs on more than 850 million personal computers worldwide, and on billions of devices worldwide, including mobile and TV devices.
+            </p>
+            <div class="main-button section-service-button">Read More</div>
+          </li>
+        </ul>
+      </div>
+    </section>
     <!-- FOOTER -->
-    <footer class="site-footer"></footer>
+    <footer class="site-footer">
+      <div class="container">
+        <div class="site-footer-info">
+          <div class="site-footer-adress">
+            <a href="index.html" class="sitenav-header__logo__link">
+            <img class="sitenav-header__logo" src="img/Group 1317.svg">
+            </a>
+            <h3 class="site-footer-title">PT Dwidasa Samsara Indonesia</h3>
+            <div class="site-footer-text">Ruko Jalur Sutera 29A No. 53</div>
+            <div class="site-footer-text">Alam Sutera Serpong, Tangerang 15323</div>
+          </div>
+          <div class="site-footer-call">
+            <h2 class="site-footer-contact">Contact</h2>
+            <div class="site-footer-call">Phone : +62.21.5314.1135</div>
+            <div class="site-footer-call">Fax : +62.21.5314.1135</div>
+            <div class="site-footer-call">Email : community@dwidasa.com</div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
